--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -139,7 +139,7 @@ p {
     background: rgba(0, 0, 0, 0.32);
     backdrop-filter: blur(16px);
 
-    @media (max-width: 1210px) {
+    @media (min-width: $media-tablet) and (max-width: 1210px) {
       height: 100% !important;
       overflow-y: scroll;
       overflow-x: hidden;
