--- a/assets/css/_form.scss
+++ b/assets/css/_form.scss
@@ -156,9 +156,25 @@
           transition: $transition;
           outline: none;
 
-          &:hover, &:focus {
+          &::before {
+            content: "";
+            width: 0;
+            height: 2px;
+            background: $color-white;
+            opacity: 0;
+            transform-origin: left center;
+            transition: $transition;
+          }
+
+          &:hover,
+          &:focus {
             gap: 20px;
             transition: $transition;
+
+            &::before {
+              width: 30px;
+              opacity: 1;
+            }
           }
         }
 
